Assignment 7/src/objects/Bypass_Logic__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Rule consist rules for bypassing the validations, triggers, objects, flows</description>
    <fields>
        <fullName>Bypass_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass Flow</description>
        <inlineHelpText>Bypass Flow</inlineHelpText>
        <label>Bypass Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for Bypass Triggers</description>
        <inlineHelpText>Bypass Triggers</inlineHelpText>
        <label>Bypass Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Logic is for bypassing the validation rules</description>
        <inlineHelpText>Bypass Validations</inlineHelpText>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objects_to_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Objects to Bypass</description>
        <inlineHelpText>Objects to Bypass</inlineHelpText>
        <label>Objects to Bypass</label>
        <type>Checkbox</type>
    </fields>
    <label>Bypass Logic</label>
</CustomObject>